host_prod/api/todolist-kotlin-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: todolist-application
spec:
  selector:
    app: kotlin-back
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
    # port: 443
    # targetPort: 443
    # nodePort: 30001
